# starlight-anime-hub

./: .gitignore  README.md  __init__.py  api_handlers.py  app.py  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py  run.py  tailwind.config.js  vercel.json
starlight/: __init__.py  api_handlers.py  config.py  routes.py
starlight/static/css/: style.css  tailwind.css
starlight/static/js/: main.js
starlight/templates/: _modals.html  anime_details_page.html  base.html  blackhole.html  bookmarks.html  continue_watching.html  episode_selection.html  index.html  navbar.html  watch_online.html
static/: manifest.json
static/css/: style.css  tailwind.css
static/js/: bookmark_manager.js  episode_selection.js  index.js  main.js  navbar.js  service-worker.js
templates/: _modals.html  anime_details_page.html  base.html  bookmarks.html  continue_watching.html  episode_selection.html  index.html  navbar.html  search_results.html
