[project]
name = "starlight-anime-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "flask-caching>=2.3.1",
    "gunicorn>=23.0.0",
    "lxml>=6.0.0",
    "requests>=2.32.4",
]
